--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,18 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
+.env.production
+
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.eslintcache
